# semgrep

./: .dockerignore  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  depot.json  devShells.nix  dune  dune-project  flake.nix  metrics.md  mypy-tests.ini  mypy.ini  pysemgrep.nix  release_changes.md  semgrep.jsonnet  semgrep.nix  semgrep.opam  semgrep.opam.template  semgrep.yml  setup.py
.github/: CODEOWNERS  actionlint.yaml
.github/workflows/: .codemapignore  Makefile  README.md  build-test-core-x86.jsonnet  build-test-core-x86.yml  build-test-docker.jsonnet  build-test-docker.yml  build-test-manylinux-x86.jsonnet  build-test-manylinux-x86.yml  build-test-osx-arm64.jsonnet  build-test-osx-arm64.yml  build-test-osx-x86.jsonnet  build-test-osx-x86.yml  build-test-windows-x86.jsonnet  build-test-windows-x86.yml  check-submodule.yml  lint.jsonnet  lint.yml  nightly.yml  pr-checklist.yaml  sync-with-PRO.jsonnet  sync-with-PRO.yml  test-e2e-semgrep-ci.jsonnet  test-e2e-semgrep-ci.yml  tests.jsonnet  tests.yml  trigger-semgrep-comparison-argo.yml
TCB/: Cap.ml  Cap.mli  CapRandom.ml  CapRandom.mli  CapStdlib.ml  CapStdlib.mli  CapSys.ml  CapSys.mli  CapUnix.ml  CapUnix.mli  common.libsonnet  dune  forbid_exec.jsonnet  forbid_process.jsonnet
changelog.d/: 2130.fixed  4394.added  APPEX-1122.added  ENGINE-2117.added  ENGINE-2448.fixed  ENGINE-2491.fixed  ENGINE-2568.changed  ENGINE-2582.changed  ENGINE-2626.fixed  ENGINE-2627.fixed  ENGINE-2649.added  ENGINE-2708.added  ENGINE-2712.fixed  ENGINE-2725.changed  ENGINE-2727-dos.fixed  ENGINE-2727.fixed  ENGINE-2728.fixed  ENGINE-2729.fixed  ENGINE-2730.fixed  ENGINE-2789.added  LANG-193.added  LANG-201.changed  LANG-218.added  LANG-255.added  LANG-268.added  LANG-271.added  LANG-271.fixed  LANG-274.fixed  LANG-275.added  LANG-287.infra  LANG-374.fixed  LANG-375.added  LANG-380.added  LANG-515.fixed  LANG-531.infra  LANG-533.fixed  LANG-536.fixed  LANG-95.added  PR-4600.changed  SAF-2061.added  (+200 more)
cli/: Makefile  Pipfile  pyproject.toml  setup.py
cli/src/: dune
cli/tests/: check-markers  conftest.py  fixtures.py  semgrep_runner.py
dev/: required.opam
interfaces/: Semgrep_prefilter.atd
languages/regexp/: AST.ml  AST.mli  Char_class.ml  Conf.ml  Conf.mli  Dialect.ml  Dialect.mli  Dump.ml  Dump.mli  Lexer.mll  (+4 more)
libs/networking/http_helpers/: dune  http_helpers.ml  http_helpers.mli
libs/networking/http_helpers/tests/: Unit_http_helpers.ml  Unit_http_helpers.mli  Unit_keepalive_race.ml  dune
libs/obackward/: dune-project  obackward.opam  obackward.opam.template
libs/obackward/src/: backward.cpp  backward.h  backward.ml  backward_stubs.c  dune
libs/obackward/src/config/: Makefile  discover.ml
libs/telemetry/: Log_telemetry.ml  Logging.ml  Logging.mli  Ometrics.ml  Ometrics.mli  Telemetry.ml  Telemetry.mli  Telemetry_commons.ml  Tracing.ml  Tracing.mli  dune
libs/telemetry/js/: Logging.ml  Ometrics.ml  Telemetry.ml  Tracing.ml  dune
libs/telemetry/ppx/: dune  ppx_tracing.ml
libs/telemetry/ppx/ppx_tests/: basic.ml  label.ml  multiple_funs.ml  nested_let.ml
libs/telemetry/ppx_tests/: trace_debug.ml
libs/telemetry/unix/: Ometrics.ml  Telemetry.ml  Tracing.ml  dune
opam-lockfiles/: semgrep.opam.linux-amd64.locked  semgrep.opam.linux-arm64.locked  semgrep.opam.mac-arm64.locked  semgrep.opam.mac-x86.locked  semgrep.opam.windows-x86.locked
perf/: compare-bench-findings  compare-perf  config.py  constants.py  corpus.py  repository_time_per_rule.py  run-benchmarks  variant.py
scripts/: build-static-libcurl.sh  build-wheels.sh  generate-cheatsheet  lint-ocaml  pick-lockfile.sh  run-core-test  validate-compiler-sha.sh  validate-docker-build.sh
scripts/release/: bump  pyproject.toml
scripts/release/git/: constants.py
src/lsp_legacy/: Language_server.ml  Legacy_language_server.ml  Legacy_ls.ml  Legacy_ls.mli  Legacy_test_ls_e2e.ml  Legacy_test_ls_e2e.mli  Legacy_unit_ls.ml  Legacy_unit_ls.mli  dune
src/lsp_legacy/custom_commands/: Legacy_autofix_cmd.ml  Legacy_autofix_cmd.mli  Legacy_ignore_cmd.ml  Legacy_ignore_cmd.mli  dune
src/lsp_legacy/custom_requests/: Legacy_login_start.ml  Legacy_login_start.mli  Legacy_login_status.ml  Legacy_login_status.mli  Legacy_loginfinish.ml  Legacy_loginfinish.mli  Legacy_search.ml  Legacy_search.mli  Legacy_showast.ml  Legacy_showast.mli  Search.ml  dune
src/lsp_legacy/notifications/: Legacy_notification_handler.ml  Legacy_notification_handler.mli  dune
src/lsp_legacy/requests/: Legacy_code_actions.ml  Legacy_code_actions.mli  Legacy_execute_command.ml  Legacy_execute_command.mli  Legacy_hover_request.ml  Legacy_hover_request.mli  Legacy_initialize_request.ml  Legacy_initialize_request.mli  Legacy_request_handler.ml  Legacy_request_handler.mli  dune
src/lsp_legacy/scan_helpers/: Legacy_diagnostics.ml  Legacy_diagnostics.mli  Legacy_processed_run.ml  Legacy_processed_run.mli  Legacy_scan_helpers.ml  Legacy_scan_helpers.mli  dune
src/lsp_legacy/server/: Legacy_ls_metrics.mli  Legacy_lsp_.ml  Legacy_lsp_.mli  Legacy_rpc_server.ml  Legacy_rpc_server.mli  Legacy_session.ml  Legacy_session.mli  Legacy_user_settings.ml  Legacy_user_settings.mli  dune
src/lsp_legacy/util/: Legacy_convert_utils.ml  Legacy_convert_utils.mli  dune
src/main/: Main.ml  dune  flags.sh  list-tree-sitter-langs.sh
src/matching/: Log_matching.ml  Match_patterns.ml  Match_patterns.mli  Matching_generic.ml  Matching_generic.mli  Matching_visitor.ml  Normalize_generic.ml  Normalize_generic.mli  Pattern_vs_code.ml  Pattern_vs_code.mli  SubAST_generic.ml  SubAST_generic.mli  Trace_matching.ml  Trace_matching.mli  Unit_matcher.ml  dune
src/matching/tests/: Unit_matcher.ml  Unit_matcher.mli  dune
src/osemgrep/reporting/tests/: Unit_reporting.ml  dune
src/prefiltering/: Analyze_pattern.ml  Analyze_pattern.mli  Analyze_rule.ml  Analyze_rule.mli  Analyze_spacegrep.mli  File.ml  File.mli  Formula.ml  Formula.mli  Log.ml  Mini_rules.ml  Mini_rules.mli  Predicate.ml  Predicate.mli  dune
src/tests/: Test.ml  dune
(+2335 files in other folders)
