(executables
 (names Main)
 (libraries
  pyro-caml-instruments
  semgrep.core_cli
  semgrep.osemgrep_cli
  ; implementations of dune virtual modules
  lwt_platform.unix
  semgrep.legacy_language_server
  )
 (preprocess
  (pps ppx_profiling
))
 ; 'byte' is for ocamldebug
 (modes native byte))

; List of OSS tree-sitter languages. Consumed by src/experiments/forge/dune
; in semgrep-proprietary, which is the only remaining binary that links
; tree-sitter language stubs statically (semgrep-core* are now dynamically
; linked).
(rule
 (deps
  (source_tree %{project_root}/languages))
 (targets tree-sitter-langs.dat)
 (action
  (with-stdout-to
   tree-sitter-langs.dat
   (chdir
    %{project_root}
    (run src/main/list-tree-sitter-langs.sh)))))

(install
 (package semgrep)
 (section bin)
 (files
  (Main.exe as semgrep-core)
  (Main.exe as osemgrep)
  ; useful to debug semgrep, see ../../debug and ocamldebug
  (Main.bc as semgrep-core.bc)
  (Main.bc as osemgrep.bc)))
