(library
 (public_name semgrep.prefiltering)
 (name prefiltering)
 (libraries
    ast_generic
    semgrep.core
    semgrep.target
 )
 (preprocess
   (pps
      ppx_deriving.show
      ppx_deriving.eq
      ppx_deriving.ord
      ppx_hash
      ppx_profiling
      ppx_sexp_conv
   )
 )
)

(rule
 (targets Semgrep_prefilter_j.ml Semgrep_prefilter_j.mli)
 (deps    Semgrep_prefilter.atd)
 (action  (run atdgen -j -j-strict-fields -j-std %{deps})))

(rule
 (targets Semgrep_prefilter_t.ml Semgrep_prefilter_t.mli)
 (deps    Semgrep_prefilter.atd)
 (action  (run atdgen -t %{deps})))
