(test
 (name test)
 (action (run %{exe:test.exe})); Ensure we're running the native binary
 (libraries
    commons
    process_limits
    lib_parsing
    aliengrep
    spacegrep_tests
    paths
    git_wrapper

    ; unix platform stuff
    lwt_platform.unix
    cohttp-lwt-unix

    commons.tests
    collections.tests
    networking.http_helpers.tests
    parallelism.tests
    semgrep.analyzing.tests ; Unit_dataflow
    semgrep.core
    semgrep.core.tests
    semgrep.core_cli
    semgrep.printing.tests
    semgrep.fixing.tests
    semgrep.metachecking.tests
    semgrep.naming.tests
    semgrep.matching.tests
    semgrep.parsing
    semgrep.parsing.tests
    semgrep.reporting.tests
    semgrep.targeting.tests
    semgrep.matching
    semgrep.engine
    aliengrep.tests
    glob.tests
    gitignore.tests
    git_wrapper.tests
    paths.tests
    lib_parsing.tests
    ojsonnet.tests
    process_limits.tests
    parser_regexp.tests
    parser_python.menhir parser_python.ast_generic
    parser_python.menhir.tests
    parser_scala.recursive_descent.tests

    osemgrep_legacy_language_server

    osemgrep_cli_login
    semgrep.osemgrep_networking.tests
    semgrep.osemgrep_cli_ci.tests
    semgrep.osemgrep_cli_test.tests
    semgrep.osemgrep_reporting.tests
    semgrep.osemgrep_tests
  )
 (modes native byte) ; bytecode here for debugging
 (preprocess
   (pps
      ppx_deriving.show
      ppx_deriving.ord
   ))
)
