(library
 (public_name networking.http_helpers)
 (name networking_http_helpers)
 (wrapped false)
  (libraries
    commons
    lwt
    uri
    cohttp-lwt
    profiling
    cohttp-eio
    ca-certs
    tls-eio
  )
  (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
      ppx_deriving.eq
      ppx_hash
      lwt_ppx
     )
   )
)
