(library
 (public_name semgrep.legacy_language_server.notifications)
 (name osemgrep_language_server_notifications)
 (wrapped false)
 (libraries
   semgrep.legacy_language_server.scan_helpers
   semgrep.legacy_language_server.server
 )
  (preprocess
   (pps
     ppx_deriving_yojson
     lwt_ppx
   )
 )
)
