(library
 (public_name semgrep.osemgrep_reporting.tests)
 (name osemgrep_reporting_tests)
 (wrapped false)
 (libraries
   commons
   semgrep.osemgrep_reporting
   semgrep.parsing ; for Parse_rule.ml in Unit_reporting
 )
 (preprocess
   (pps
     ppx_profiling
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
     lwt_ppx
     commons.ppx
   )
 )
)
